# fcitx5-zhuyin

./: CMakeLists.txt  Messages.sh  org.fcitx.Fcitx5.Addon.Zhuyin.metainfo.xml.in  org.fcitx.fcitx5-zhuyin.metainfo.xml.in
.github/workflows/: check.yml
data/: CMakeLists.txt  table.conf  table.conf.in  zhuyin.lua
po/: CMakeLists.txt  ca.po  da.po  de.po  fcitx5-zhuyin.pot  fr.po  he.po  ja.po  ka.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  zhuyin-addon.conf.in  zhuyin-addon.conf.in.in  zhuyin.conf.in  zhuyinbuffer.cpp  zhuyinbuffer.h  zhuyincandidate.cpp  zhuyincandidate.h  zhuyinengine.cpp  zhuyinengine.h  zhuyinsection.cpp  zhuyinsection.h  zhuyinsymbol.cpp  zhuyinsymbol.h
test/: CMakeLists.txt  testdir.h.in  testzhuyinbuffer.cpp
